2009-03-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/internal/Makefile.am: Install internal headers, for
	information purpose.

	* include/exmpp_xml.hrl: Declare a real type for each record. This
	permits to reference them in modules that do not include this header.

	* src/core/exmpp_xml.erl: Types documentation is moved near the top of
	the file, like other source files. Declare a real type for records
	that may be used by other modules. Fix xmlparseroption() type
	definition. Use types instead of record in contract. Fix many
	contracts; add a command where contracts couldn't be fixed because of
	Dialyzer limitations. Now that R12B is required, use lists:keystore/4
	instead of the replacement function in exmpp_utils.

	* src/core/exmpp_utils.erl (keystore/4): Remove this replacement
	function now that R12B is required.

	* src/core/exmpp_jid.er: Declare a jid() type so that other modules
	can reference it.

	* src/core/exmpp_stanza.erl: Rename the type jid() to jidlike(). It
	shouldn't be confused with exmpp_jid:jid(). It still covers jid(),
	binary() and string().

	* src/core/exmpp_internals.erl: Add contracts. Fix documentation.

	* src/core/exmpp_tls.erl (handshake/6): Fix a bug where a case clause
	could never match. Spotted by Dialyzer.

	* src/core/exmpp_presence.erl (get_show/1): Fix a bug where case
	clauses could never match: the code was expecting string() from a
	function returning binary(). Spotted by Dialyzer.

	* src/core/exmpp_iq.erl: Do not include exmpp_xml.hrl anymore and use
	the new exmpp_stanza:jidlike() type.

	* src/core/exmpp_xmlstream.erl: Declare types to be used in contracts.
	Fix documentation. Remove a useless case clause. Spotted by Dialyzer.

	* c_src/exmpp_xml.c: Correct null pointer checks. Spotted by Clang
	static analyzer.

	* src/core/exmpp_iq.erl (xmlel_to_iq/1): Fix a bug where a conversion
	of a result IQ would crash.
	(get_payload/1): Fix contract.
